[package]
name = "rustree"
version = "0.1.0"
edition = "2021"
authors = ["Gabriele Costanza <gabriel.cstnz@gmail.com>"]
categories = ["parser-implementations"]
description = "Parser for rust code"
keywords = ["macros", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[features]
debug = []
serialize = []

[dependencies]
quote = "^1.0"
syn = { version = "2.0.38", features = ["full", "visit", "visit-mut"] }
proc-macro2 = { version = "1.0.66" }
serde = { version = "1.0.189", features = ["derive"] }


[workspace]
members = ["examples/parse_simple", "examples/parse_with_macro", "tests/*"]
