[package]
name = "parse_with_macro"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "parse_with_macro"
bin = "src/main.rs"

[dependencies.rustree]
default-features = false
features = ["debug"]
path = "../.."
